fix cropped image

--- a/client/src/components/Capsule/Capsule.module.scss
+++ b/client/src/components/Capsule/Capsule.module.scss
@@ -36,7 +36,7 @@
     img {
       height: 20px;
       width: 20px;
-      object-fit: cover;
+      object-fit: scale-down;
     }
   }
   .DetailBox {
